Tweaked controller method name attributes
